--- a/DataBase/magazyn.ui
+++ b/DataBase/magazyn.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>901</width>
     <height>600</height>
    </rect>
   </property>
@@ -40,7 +40,7 @@
    <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
-      <x>580</x>
+      <x>690</x>
       <y>20</y>
       <width>190</width>
       <height>70</height>
@@ -143,7 +143,7 @@
    <widget class="QLabel" name="labelDaty">
     <property name="geometry">
      <rect>
-      <x>680</x>
+      <x>790</x>
       <y>30</y>
       <width>81</width>
       <height>20</height>
@@ -261,13 +261,23 @@
      <string>TextLabel</string>
     </property>
    </widget>
+   <widget class="QComboBox" name="comboBox_4">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>170</y>
+      <width>201</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>901</width>
      <height>21</height>
     </rect>
    </property>
