--- a/Urzadzenia/urzadzenia.ui
+++ b/Urzadzenia/urzadzenia.ui
@@ -349,8 +349,8 @@
    <widget class="QComboBox" name="comboBox_3">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>110</y>
+      <x>530</x>
+      <y>380</y>
       <width>211</width>
       <height>22</height>
      </rect>
@@ -586,6 +586,19 @@
       <string>Dodaj od razu do Magazynu</string>
      </property>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>50</y>
+      <width>181</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Dodaj seryjnie te same urządzenia</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
