--- a/Urzadzenia/urzadzenialista.ui
+++ b/Urzadzenia/urzadzenialista.ui
@@ -399,6 +399,19 @@
      <string>Ostatnie 10</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="checkBox_2">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>20</y>
+      <width>101</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Tylko Magazyn</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
